<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <TextView

            android:id="@+id/name"
            android:layout_column="0"
            android:padding="5dp"
            android:text="Name"
            android:textSize="18sp"
            />

        <TextView

            android:id="@+id/normal_finding"
            android:layout_column="1"
            android:padding="5dp"
            android:text="@string/normal_finding"
            android:textSize="18sp"

            />

        <TextView

            android:id="@+id/increased"
            android:layout_column="2"
            android:padding="5dp"
            android:text="@string/increased"
            android:textSize="18sp"
            />

        <TextView

            android:id="@+id/decreased"
            android:layout_column="3"
            android:padding="5dp"
            android:text="@string/decreased"
            android:textSize="18sp"
            />

        <TextView

            android:id="@+id/others"
            android:layout_column="4"
            android:padding="5dp"
            android:text="@string/others"
            android:textSize="18sp"
            />
    </TableRow>
</TableLayout>