<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/backgroundpicture"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/loginRelative"

    >

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundpicture" />-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layoutMarginLeft"
        android:layout_marginRight="@dimen/layoutMarginRight"
        android:gravity="center_horizontal|center"
        android:orientation="vertical"
        android:id="@+id/layoutMain"
        android:visibility="visible"
        >

        <de.hdodenhof.circleimageview.CircleImageView

            android:layout_width="@dimen/circleImageWidth"
            android:layout_height="@dimen/circleImageHeight"
            android:src="@drawable/user" />

        <EditText

            android:id="@+id/phoneNumber"
            style="@style/editText"
            android:hint="@string/mobile_number"
            android:paddingLeft="@dimen/edittextPaddingLeft"
            android:inputType="phone"
            android:maxLength="11"
            android:digits="0123456789"

            />


        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginHeight"
            android:layout_marginTop="@dimen/loginMarginTop"
            android:background="@drawable/border"
            android:gravity="center_horizontal|center"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/loginTextsize"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verificationLayoutLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/editTextOtpCode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:drawablePadding="10dp"
            android:hint="@string/enter_verification_code"
            android:inputType="phone"
            android:maxLength="11" />

        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_border"
            android:text="@string/verify"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/accountCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/createNewAccountMarginBottom"
        android:gravity="center_horizontal"
        android:text="@string/create_new_account"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/createNewAccountTextSize"

        />


</RelativeLayout>