<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TMSGMain"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/medicineTxtview"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/medicine"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"

                />

            <TextView
                android:id="@+id/surgeryTxtview"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/surgery"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"

                />

            <TextView
                android:id="@+id/gynacologyTxtview"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/gynacology"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"

                />

        </LinearLayout>
        <FrameLayout
            android:id="@+id/recentMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

</LinearLayout>